--- a/src/views/erciyuan.qidian.com/index.html
+++ b/src/views/erciyuan.qidian.com/index.html
@@ -17,23 +17,25 @@
     <link rel="shortcut icon" href="http://www.qidian.com/favicon.ico" type="image/icon" />
     <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/reset.css">
     <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/global.css">
-    <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/font.0.1.css">
-    <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/header.css">
     <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/module.css">
-    <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/index.0.1.css">
     <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/layout.css">
-    <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/qd_popup.css">
-    <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/footer.css">
-    <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/lbfUI/css/ComboBox.css">
-    <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/lbfUI/css/Button.css">
-    <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/lbfUI/css/Autocomplete.css">
-    <!-- end speedTimer[var, zero] -->
-
-    <!-- 配置Combo 若无需合并,请给link或者script增加 data-ignore="true" 属性-->
-
+    <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/header.css">
+    <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/font.0.1.css">
+    <link rel="stylesheet" href="<%= staticConf.staticPath %>/css/erciyuan.css">
 </head>
 <body>
-test
+<div class="wrap">
+    <!-- start 顶部固定导航 -->
+    <% include ../component/fixed_top_nav.html %>
+    <!--end 顶部固定导航-->
+    <!-- start logo & 搜索 -->
+    <% include component/logo_search_bar.html %>
+    <!-- end logo & 搜索 -->
+    <!-- start 主导航 -->
+    <% include component/main_nav.html %>
+    <!-- end 主导航 -->
+</div>
+
 <!-- start LBF lib -->
 <script src="//<%= staticConf.staticDomain %>/lbf/1.0.2/LBF.js?max_age=31536000"></script>
 <script>
